# kaboom

./: .bazelrc  .gitignore  BUILD.bazel  Containerfile  DEVELOPMENT.md  MODULE.bazel  README.md  RULES.md  bishop.go  chess.go  chessboard_start.json  effect_apply.go  game.go  go.mod  go.sum  king.go  knight.go  main.go  move.go  pawn.go  piece.go  position.go  queen.go  repl_parser.go  repl_parser_test.go  rook.go  serialization.go  state_validation.go  uuid.go  validation.go  variant.go
.devcontainer/: Containerfile  devcontainer.json  init-bazel.sh
.devcontainer/bashrc.d/: ps1.sh
classic/: bishop_capture_test.go  bishop_move_test.go  effect_helpers.go  game.go  ite_bishop_capture.go  ite_bishop_move.go  ite_king_capture.go  ite_king_castle.go  ite_king_move.go  ite_knight_capture.go  ite_knight_move.go  ite_pawn_capture.go  ite_pawn_move.go  ite_queen_capture.go  ite_queen_move.go  ite_rook_capture.go  ite_rook_move.go  king_capture_test.go  king_castle_test.go  king_move_test.go  knight_capture_test.go  knight_move_test.go  move.go  move_bishop.go  move_king.go  move_knight.go  move_pawn.go  move_queen.go  move_rook.go  move_sliding.go  mti_bishop_capture.go  mti_bishop_move.go  mti_king_capture.go  mti_king_castle.go  mti_king_move.go  mti_knight_capture.go  mti_knight_move.go  mti_pawn_capture.go  mti_pawn_double_move.go  mti_pawn_en_passant.go  (+22 more)
cmd/kaboom-example/: main.go
cmd/kaboom-example-classicstart/: main.go
cmd/kaboom-example-start/: main.go
cmd/kaboom-repl/: main.go  repl_parser.go
cmd/kaboom-server/: main.go
examples/: game_in_progress.go
kaboomstate/: apply_effects.go  board.go  cloneable.go  color.go  effect.go  effect_helpers.go  effect_nothing_happens.go  effect_piece_bumped.go  effect_piece_captured.go  effect_piece_created.go  effect_piece_deleted.go  effect_piece_deployed.go  effect_piece_moved.go  effect_piece_promoted.go  effect_piece_transfer.go  effect_win.go  errors.go  game.go  intent.go  move.go  move_helpers.go  piece.go  player.go  position.go  vector.go  visual_hint.go  visual_hint_collision.go  visual_hint_disintegration.go  visual_hint_explosion.go  visual_hint_mind_control.go  visual_hint_nova.go  visual_hint_snipe.go  visual_hint_stomp.go  visual_hint_yeet.go  zone.go
proto/: protobuf_go.sh  protobuf_ts.sh
proto/go/: board.pb.go  color.pb.go  delta.pb.go  effect.pb.go  game.pb.go  intent.pb.go  (+12 more)
server/: apply_effects.go  evaluate_move.go  intent_to_effect.go  move_to_intent.go  new_game.go  parse_repl_move.go  server.go  variants.go
src/proto/kaboomproto/: BUILD.bazel  board.proto  color.proto  delta.proto  game.proto  location.proto  move.proto  move_classic.proto  move_kaboom.proto  piece.proto  player.proto  turn.proto  visual_hint.proto
tools/: format.sh  tidy.sh
(+32 files in other folders)
