module(
    name = "kaboom",
    version = "0.0.0",
    compatibility_level = 1,
)

bazel_dep(name = "rules_cc", version = "0.2.16")
bazel_dep(name = "protobuf", version = "33.2")

bazel_dep(name = "catch2", version = "3.11.0", dev_dependency = True)
bazel_dep(name = "buildifier_prebuilt", version = "8.2.1.1", dev_dependency = True)
bazel_dep(name = "rules_shell", version = "0.6.1", dev_dependency = True)

# compile_commands.json generator (dev-only).
bazel_dep(name = "wolfd_bazel_compile_commands", version = "0.5.2", dev_dependency = True)
